src/snapshots/juntakami__filters__test__keep_drop_false.snap
---
source: src/filters.rs
expression: rmd
snapshot_kind: text
---
# High level { .keep }

Expect to see this

# Definitely have { .keep }

 > 
 > We’re keeping this blockquote
 > 
 > # See this bit again
 > 
 > Woo
